--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-beta6'
+        classpath 'com.android.tools.build:gradle:3.2.0-alpha16'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
