--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,9 @@
+plugins {
+    id "io.gitlab.arturbosch.detekt" version "1.0.0.RC6-4"
+}
+
 apply plugin: 'com.android.application'
+apply from: '../config/quality/quality.gradle'
 
 android {
     compileSdkVersion 'android-27'
