--- a/config/quality/quality.gradle
+++ b/config/quality/quality.gradle
@@ -38,7 +38,12 @@ task checkstyle(type: Checkstyle) {
     // rules.xml copy from:
     // https://raw.githubusercontent.com/checkstyle/checkstyle/checkstyle-7.4/src/main/resources/google_checks.xml
     // the version should be as same as plugin version
-    configFile new File(rootDir, "config/quality/checkstyle.xml")
+    configFile = new File(rootDir, 'config/checkstyle.xml')
+    if (!configFile.exists()) {
+        new URL('https://raw.githubusercontent' +
+                '.com/Hipo/android-base-project/master/config/quality/checkstyle.xml')
+                .withInputStream{ i -> configFile.withOutputStream{ it << i }}
+    }
     source 'src'
     include '**/*.java'
     exclude '**/gen/**'
