--- a/config/quality/quality.gradle
+++ b/config/quality/quality.gradle
@@ -40,8 +40,7 @@ task checkstyle(type: Checkstyle) {
     // the version should be as same as plugin version
     configFile = new File(rootDir, 'config/checkstyle.xml')
     if (!configFile.exists()) {
-        new URL('https://raw.githubusercontent' +
-                '.com/Hipo/android-base-project/master/config/quality/checkstyle.xml')
+        new URL('https://raw.githubusercontent.com/Hipo/android-base-project/master/config/quality/checkstyle.xml')
                 .withInputStream{ i -> configFile.withOutputStream{ it << i }}
     }
     source 'src'
