Changed quaility tool gradle to download checkstyle config in every build

--- a/config/quality/quality.gradle
+++ b/config/quality/quality.gradle
@@ -19,7 +19,7 @@ task ktlint(type: JavaExec, group: "verification") {
 }
 
 detekt {
-    version = "1.0.0.RC6-4"
+    version = "1.0.0.RC8"
     def configFile = new File(rootDir, 'detekt-config.yml')
     if (!configFile.exists()) {
         new URL('https://raw.githubusercontent.com/Hipo/android-base-project/master/config/quality/detekt-config.yml')
@@ -43,11 +43,7 @@ task checkstyle(type: Checkstyle) {
     // rules.xml copy from:
     // https://raw.githubusercontent.com/checkstyle/checkstyle/checkstyle-7.4/src/main/resources/google_checks.xml
     // the version should be as same as plugin version
-    configFile = new File(rootDir, 'checkstyle-config.xml')
-    if (!configFile.exists()) {
-        new URL('https://raw.githubusercontent.com/Hipo/android-base-project/master/config/quality/checkstyle.xml')
-                .withInputStream{ i -> configFile.withOutputStream{ it << i }}
-    }
+    config project.resources.text.fromUri(new URL('https://raw.githubusercontent.com/Hipo/android-base-project/master/config/quality/checkstyle.xml'))
     source 'src'
     include '**/*.java'
     exclude '**/gen/**'
