--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,17 @@
 plugins {
-    id "io.gitlab.arturbosch.detekt" version "1.0.0.RC6-4"
+    id "io.gitlab.arturbosch.detekt" version "1.0.0.RC8"
 }
 
 apply plugin: 'com.android.application'
 apply from: '../config/quality/quality.gradle'
 
 android {
-    compileSdkVersion 'android-27'
-    buildToolsVersion "28.0.0rc2"
+    compileSdkVersion 'android-28'
+    buildToolsVersion "28.0.1"
     defaultConfig {
         applicationId "com.hipo.android"
         minSdkVersion 15
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
