Added getItemViewType to excluded methods for return count limit

--- a/config/quality/detekt-config.yml
+++ b/config/quality/detekt-config.yml
@@ -176,7 +176,7 @@ exceptions:
   ThrowingNewInstanceOfSameException:
     active: false
   TooGenericExceptionCaught:
-    active: true
+    active: false
     exceptionNames:
      - ArrayIndexOutOfBoundsException
      - Error
@@ -347,7 +347,7 @@ style:
   ReturnCount:
     active: true
     max: 2
-    excludedFunctions: "equals"
+    excludedFunctions: "equals,getItemViewType"
   SafeCast:
     active: true
   SerialVersionUIDInSerializableClass:
