Disabled generic exception linter rules

--- a/config/quality/detekt-config.yml
+++ b/config/quality/detekt-config.yml
@@ -187,7 +187,7 @@ exceptions:
      - RuntimeException
      - Throwable
   TooGenericExceptionThrown:
-    active: true
+    active: false
     exceptionNames:
      - Error
      - Exception
