Fixed detekt not producing html reports

--- a/config/quality/quality.gradle
+++ b/config/quality/quality.gradle
@@ -35,7 +35,7 @@ detekt {
         }
         html {
             enabled = true
-            destination = file("$projectDir/build/reports/detekt/detek-report.xml")
+            destination = file("$projectDir/build/reports/detekt/detek-report.html")
         }
     }
 }
