--- a/config/quality/quality.gradle
+++ b/config/quality/quality.gradle
@@ -7,15 +7,14 @@ configurations {
 }
 
 dependencies {
-    ktlint "com.github.shyiko:ktlint:0.23.1"
+    ktlint "com.pinterest:ktlint:0.36.0"
 }
 
 task ktlint(type: JavaExec, group: "verification") {
     description = "Check Kotlin code style."
-    main = "com.github.shyiko.ktlint.Main"
     classpath = configurations.ktlint
+    main = "com.pinterest.ktlint.Main"
     args "src/**/*.kt"
-    args "--reporter=html,artifact=me.cassiano:ktlint-html-reporter:0.1.2,output=${buildDir}/reports/ktlint/ktlint.html"
 }
 
 detekt {
