--- a/config/quality/quality.gradle
+++ b/config/quality/quality.gradle
@@ -14,7 +14,7 @@ task ktlint(type: JavaExec, group: "verification") {
     description = "Check Kotlin code style."
     classpath = configurations.ktlint
     main = "com.pinterest.ktlint.Main"
-    args "src/**/*.kt", "--reporter=html,artifact=com.github.mcassiano:ktlint-html-reporter:master-SNAPSHOT"
+    args "src/**/*.kt", "--reporter=html,artifact=me.cassiano:ktlint-html-reporter:0.2.3,output=${buildDir}/ktlint.html"
 }
 
 detekt {
